--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: nyuriumuri
-url: localhost:4000
+url: https://nyuriumuri.github.io/Projects
 #paginate: 0
 baseurl: /Projects
 permalink: pretty
